Removed reflection remainings